[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "podcast-network"
version = "0.1.0"
description = "Modern podcast host/guest network analysis and web app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.2,<6.0",
  "feedparser>=6.0,<7.0",
  "networkx>=3.5,<4.0",
  "numpy>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "plotly>=6.0,<7.0",
  "pydantic>=2.8,<3.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
]

[project.scripts]
podcast-network = "podcast_network.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_network"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
